BB-9470: Mobile/FrontStore > - modal confirmation popup does not fit to display in portrait mode - fixed popup in IE11

--- a/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/components/ui/dialog.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/components/ui/dialog.scss
@@ -23,6 +23,8 @@
     border-radius: 4px;
 
     .ui-widget-content {
+        max-height: 85vh;
+
         overflow-y: auto;
         flex-shrink: 5;
     }
@@ -121,6 +123,9 @@
 
     .ui-dialog-buttonpane {
         padding: 20px 40px 30px;
+
+        overflow: visible;
+
         border-bottom-left-radius: 4px;
         border-bottom-right-radius: 4px;
 
